           eq. 12 in Sohbati et al. (2012b) can be fitted, which also
           considers the dose rate.

  New example data:

         • ‘ExampleData.SurfaceExposure’: A set of synthetic OSL
           surface exposure dating data to demonstrate the
           fit_SurfaceExposure() functionality. See
           ?ExampleData.SurfaceExposure for details.

  S4-classes and methods:

         • The ‘RLum.Analysis’ show method failed for
           ‘RLum.Data.Spectrum’ objects; fixed.

         • Method for ‘get_RLum’ with signature ‘NULL’ added. Now it
           returns ‘NULL’.

         • The coercion from ‘list’ to ‘RLum.Results’ using ‘as()’ did
           not work; fixed.

  Bugfixes and changes:

         • ‘analyse_IRSAR.RF()’

             • Multicore processing now also supports Windows (#47)

             • Fixed a bug where manually specifying the number of CPU
               cores via 'method.control = list(cores = x)' was not
               respected,

             • mixing of curves (e.g., regenerated first, natural
               second) led to a crash of the function, even the new
               structure was correctly specified; fixed (#61).

         • ‘calc_Kars2008()’

             • In some cases the calculated LxTx values of the
               simulated natural dose response curve were slightly
               underestimated and its maximum value differed from the
               individually calculated nN(ss) value. The approach to
               calculate the natural DRC was changed and now yields a
               maximum LxTx value indistinguishable from nN(ss).

             • Numeric output in the plot should now always be inside
               the plotting frame.

             • The number of digits for the numeric output in the plot
               was slightly adjusted.

         • ‘plot_FilterCombinations()’

             • Add interactive mode (‘interactive = TRUE’)

         • ‘plot_GrowthCurve()’
