@@ -11,3 +11,4 @@ ExampleData.RLum.Data.Image
 ExampleData.SurfaceExposure
 ExampleData.XSYG
 ExampleData.portableOSL
+ExampleData.Al2O3C
